--- a/topic07-sequences/ajaxlabel.html
+++ b/topic07-sequences/ajaxlabel.html
@@ -10,7 +10,7 @@
 
   $.ajax({
     type: 'GET',
-    url: '://maireadmeagher.github.io/form-spec-17//topic07-sequences/indexmoodle.html',
+    url: '://maireadmeagher.github.io/form-spec-17///topic07-sequences/indexmoodle.html',
     xhrFields: {
       withCredentials: false
     },
