--- a/topic07-sequences/indexmoodle.html
+++ b/topic07-sequences/indexmoodle.html
@@ -162,7 +162,7 @@ figcaption
     <a class="ui raised link card" href="https://maireadmeagher.github.io/form-spec-17/topic07-sequences/talk-4/d-solutions-sequences.pdf" target="_blank">
     
       <div class="image">
-        <img class="ui bordered rounded image" src="https://maireadmeagher.github.io/form-spec-17/topic07-sequences/talk-4/d-solutions-sequences.png">
+        <img class="ui bordered rounded image" src="https://maireadmeagher.github.io/form-spec-17/topic07-sequences/talk-4/d-solutions-sequences.jpg">
       </div>
     </a>
 
